src/microservices/onprem/app1-webui/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-webui-deployment
  labels:
    app: app1
    name: app1-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      name: app1-webui
  template:
    metadata:
      labels:
        name: app1-webui
    spec:
      containers:
      - name: app1-webui
        image: nuttaporn1449/app1-webui:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: 128Mi
            cpu: 50m
          limits:
            memory: 256Mi
            # cpu: 500m
